passage du projet au format eclipse